--- a/pokemon.html
+++ b/pokemon.html
@@ -10,7 +10,7 @@
     <h1>First Gen Pokemon Chart</h1>
     <table border="1">
         <thead>
-            <tr>
+            <tr style="text-align: center;">
                 <td>Image</td>
                 <td>Name</td>
                 <td>Type</td>
@@ -19,7 +19,9 @@
         </thead>
         <tbody>
             <tr>
-                <td>http://img4.wikia.nocookie.net/__cb20140328190757/pokemon/images/thumb/2/21/001Bulbasaur.png/200px-001Bulbasaur.png</td>
+                <td>
+                    <img src="http://img4.wikia.nocookie.net/__cb20140328190757/pokemon/images/thumb/2/21/001Bulbasaur.png/200px-001Bulbasaur.png" alt="Bulbasaur">
+                </td>
                 <td>
                     Bulbasaur
                 </td>
@@ -27,8 +29,28 @@
                     Grass/Poison
                 </td>
                 <td>
-<a href="http://pokemon.wikia.com/wiki/Ivysaur">Ivysaur</a>
+                    <a href="http://pokemon.wikia.com/wiki/Ivysaur">Ivysaur</a>
                 </td>
+            </tr>
+            <tr>
+                <td>
+                    <img src="http://img4.wikia.nocookie.net/__cb20140724195345/pokemon/images/thumb/7/73/004Charmander.png/200px-004Charmander.png" alt="Charmander">
+                </td>
+                <td>
+                    Charmander
+                </td>
+                <td>
+                    Fire
+                </td>
+                <td>
+                    <a href="http://pokemon.wikia.com/wiki/Charmeleon">Charmeleon</a>
+                </td>
+            </tr>
+            <tr>
+                <td><img src="http://img1.wikia.nocookie.net/__cb20140328191525/pokemon/images/thumb/3/39/007Squirtle.png/200px-007Squirtle.png" alt="Squirtle"></td>
+                <td>Squirtle</td>
+                <td>Water</td>
+                <td><a href="http://pokemon.wikia.com/wiki/Wartortle">Wartortle</a></td>
             </tr>
         </tbody>
     </table>
